<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.quizapp.MainActivity">

        <!-- - - - - - - Question   -->

        <LinearLayout
            android:id="@+id/q_text_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_vertical"
            android:layout_marginTop="@dimen/medium_vertical"
            android:layout_marginLeft="@dimen/horizontal_m"
            android:layout_marginRight="@dimen/horizontal_m"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/medium_vertical"
                android:text="@string/welcome"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textSize="@dimen/q_txtsize"
                />

            <ImageView
                android:id="@+id/img_view"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/alsace"
                />

        </LinearLayout>

        <!-- answer fields -->
        <LinearLayout
            android:id="@+id/answer_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/q_text_img"
            android:orientation="vertical">


            <EditText
                android:id="@+id/user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_m"
                android:layout_marginRight="@dimen/horizontal_m"
                android:visibility="gone"
                android:inputType="number"
                />

            <!--Q1 answers-->

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_m"
                android:gravity="center_horizontal">

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/q1_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical"
                    android:visibility="gone">


                    <RadioButton
                        android:id="@+id/q1_a1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_a1" />

                    <RadioButton
                        android:id="@+id/q1_a2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_a2"

                        />

                    <RadioButton
                        android:id="@+id/q1_a3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_a3"

                        />

                    <RadioButton
                        android:id="@+id/q1_a4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_a4"

                        />


                </RadioGroup>
            </RelativeLayout>


            <!--Q3 answers-->
            <RelativeLayout
                android:id="@+id/q3_answers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_m"
                android:gravity="center_horizontal"
                android:visibility="gone"

                >


                <CheckBox
                    android:id="@+id/q3_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/q3_a1" />

                <CheckBox
                    android:id="@+id/q3_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/q3_a1"
                    android:text="@string/q3_a2" />

                <CheckBox
                    android:id="@+id/q3_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/q3_a2"
                    android:text="@string/q3_a3"

                    />

                <CheckBox
                    android:id="@+id/q3_a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/q3_a3"
                    android:text="@string/q3_a4"

                    />

                <CheckBox
                    android:id="@+id/q3_a5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/q3_a4"
                    android:text="@string/q3_a5"

                    />

            </RelativeLayout>

            <!--Q4 answers-->

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_m"
                android:gravity="center_horizontal">

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/q4_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/q4_a1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_a1" />

                    <RadioButton
                        android:id="@+id/q4_a2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_a2" />

                    <RadioButton
                        android:id="@+id/q4_a3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_a3" />

                </RadioGroup>
            </RelativeLayout>

            <!--Q5 answers-->

            <RelativeLayout
                android:id="@+id/q5_answers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_m"
                android:gravity="center_horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/q5_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/q5_a1" />

                <CheckBox
                    android:id="@+id/q5_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/q5_a1"
                    android:text="@string/q5_a2" />

                <CheckBox
                    android:id="@+id/q5_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/q5_a2"
                    android:text="@string/q5_a3"

                    />

                <CheckBox
                    android:id="@+id/q5_a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/q5_a3"
                    android:text="@string/q5_a4"

                    />

            </RelativeLayout>

            <!--Q6 answers-->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_m"
                android:gravity="center_horizontal"

                >

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/q6_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/q6_a1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_a1" />

                    <RadioButton
                        android:id="@+id/q6_a2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_a2" />

                    <RadioButton
                        android:id="@+id/q6_a3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_a3" />

                    <RadioButton
                        android:id="@+id/q6_a4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_a4" />

                </RadioGroup>
            </RelativeLayout>
        </LinearLayout>


        <!-- - - - - -  SUBMIT BUTTON - - - - - -  -->

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/answer_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_vertical"
            android:onClick="NextQuestion"
            android:padding="@dimen/small_vertical"
            android:text="@string/start"
            android:textSize="@dimen/button_txtsize"
            android:background="@color/colorButton"

            />


    </RelativeLayout>
</ScrollView>


